# QuantumChess

./: .gitignore  CMakeLists.txt  Projekt_2.vcxproj  ReadMe.md  SDL.cpp
src/: Bauer.cpp  Bauer.h  Client_Netwerk.cpp  Dame.cpp  Dame.h  Figuren.cpp  Figuren.h  GameLogic.cpp  GameLogic.h  Koenig.cpp  Koenig.h  Laeufer.h  SDL.cpp  SDL_Test.cpp  SDL_Test.h  Springer.cpp  Structs.h  main.cpp  main_tmp.cpp  test_texture.cpp
src/Deprecated/: Brett.h  Quanten_Schach.cpp  Quanten_Schach.h  SDL_Test.cpp  SDL_Test.h  SDL_Test_alt.cpp  SDL_Test_alt.h  Schach_Logik.cpp  Spiel_Logik.cpp  Spiel_Logik.h  main_quanten.cpp  main_tmp.cpp
src/GUI/: ChesssBoardView.cpp  ChesssBoardView.h  SDL.cpp  SDL_Helper.cpp  SDL_Helper.h  SDL_Test.cpp  SDL_Test.h
src/Logic/: Brett.h  GameLogic.cpp  GameLogic.h  main_quanten.cpp  main_quanten.h
src/Model/: Bauer.cpp  Bauer.h  Dame.cpp  Dame.h  Figuren.cpp  Figuren.h  Koenig.cpp  Koenig.h  Laeufer.cpp  Laeufer.h  Springer.cpp  Springer.h  Structs.h  Turm.cpp  Turm.h
src/Network/: Client_Network.cpp  Client_Network.h
src/Spiel_Logik/: Bauer.cpp  Bauer.h  Brett.h  Dame.cpp  Dame.h  Figuren.cpp  Figuren.h  Koenig.cpp  Koenig.h  Laeufer.cpp  Laeufer.h  Quanten_Schach.cpp  Quanten_Schach.h  SDL_Test.cpp  Schach_Logik.cpp  Springer.cpp  Springer.h  Turm.cpp  Turm.h
